cycles OpenCL corruption in todays buildbot (wasn't there 2 days ago) #51341

Closed
opened 2017-04-28 12:42:49 +02:00 by matali23 · 10 comments

System Information
Windows 7 x64, 2x RX 480 with driver 17.4.3

Blender Version
Broken: a85f457
Worked: f1ada2e

Short description of error
textures are wrong when rendering with OpenCL

Exact steps for others to reproduce the error
Render the Barcelona scene for example, this is what you get:

bug unlimited textures.jpg

All textures are gone.

**System Information** Windows 7 x64, 2x RX 480 with driver 17.4.3 **Blender Version** Broken: a85f457 Worked: f1ada2e **Short description of error** textures are wrong when rendering with OpenCL **Exact steps for others to reproduce the error** Render the Barcelona scene for example, this is what you get: ![bug unlimited textures.jpg](https://archive.blender.org/developer/F576657/bug_unlimited_textures.jpg) All textures are gone.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @matali23

Added subscriber: @matali23

This issue was referenced by blender/cycles@b1f817f563

This issue was referenced by blender/cycles@b1f817f563f9ed1d1fd272d3943baf27363777df

This issue was referenced by 8f4166ee49

This issue was referenced by 8f4166ee495531fa38b676b0a5ef4c482e89f9a5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @Sergey

Added subscriber: @Sergey

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Re-opening, there is still issue when mixing textures of different types.

Re-opening, there is still issue when mixing textures of different types.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sergey Sharybin self-assigned this 2017-04-28 15:13:37 +02:00

I believe the issue is now fully fixed by 0f339a748e.

I believe the issue is now fully fixed by 0f339a748e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51341
No description provided.